--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,6 @@ ul {
 	opacity: 0;
 	pointer-events: none;
 	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	
 }
 .backdrop {
 	position: fixed;
@@ -230,7 +229,7 @@ ul {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	transform:translate(-50%, -50%) scale(1);
+	transform: translate(-50%, -50%) scale(1);
 	transition: opacity 1050ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal > span {
@@ -552,10 +551,11 @@ ul {
 /* ------------------------------------------------styles footer----------------------------- */
 .footer {
 	background-color: var(--secondary-backgraund);
-	padding: 60px 0px;
+	padding: 72px 0px;
 }
 
 .footer-linkname {
+	display: block;
 	font-family: "Raleway", sans-serif;
 	font-weight: 700;
 	font-size: 26px;
@@ -563,6 +563,7 @@ ul {
 	letter-spacing: inherit;
 	color: var(--primary-color);
 	text-decoration: none;
+	margin-top: -12px;
 }
 .contact-map {
 	line-height: 1.71;
@@ -611,7 +612,6 @@ ul {
 	text-transform: uppercase;
 	color: var(--primary-color);
 	margin-bottom: 20px;
-	padding-top: 10px;
 }
 .footer-link-social {
 	background: var(--background-footer-icon);
@@ -645,4 +645,68 @@ ul {
 .footer-list-social {
 	display: flex;
 	gap: 10px;
+}
+.footer-subscription {
+	margin-left: 20px;
+}
+.subscription-title {
+	color: var(--primary-color);
+	font-size: var(--primary-font-size);
+	line-height: 1.14;
+	letter-spacing: 0.03em;
+	text-transform: uppercase;
+	margin-bottom: 20px;
+}
+.subscription-contact {
+	display: flex;
+	gap: 12px;
+}
+.subscription-input {
+	display: block;
+	padding: 15px;
+	background: var(--secondary-backgraund);
+	color: rgba(255, 255, 255, 0.6);
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+	border-radius: 4px;
+	width: 358px;
+	height: 50px;
+	font-size: 16px;
+	line-height: calc(20 / 16);
+	letter-spacing: 0.03em;
+}
+
+.subscription-input:focus-visible {
+	outline: none;
+}
+.subscription-btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background: var(--color-akcent);
+	color: var(--primary-color);
+	font-size: 16px;
+	line-height: calc(30 / 16);
+	letter-spacing: 00.06em;
+	text-transform: capitalize;
+	width: 200px;
+	height: 50px;
+	padding: 10px 28px;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	border-radius: 4px;
+	gap: 10px;
+	border: none;
+	transition-property: background-color, box-shadow;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	cursor: pointer;
+}
+.subscription-btn:hover,
+.subscription-btn:focus {
+	background-color: var(--color-btn-hover);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+.subscription-icon {
+	width: 24px;
+	height: 24px;
 }
