--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ ul {
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .backdrop.is-hidden {
-	opacity: 0;
+	/* opacity: 0; */
 	pointer-events: none;
 	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -218,7 +218,7 @@ ul {
 	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
-	position: absolute;
+	position: fixed;
 	top: 50%;
 	left: 50%;
 	width: 528px;
@@ -226,14 +226,33 @@ ul {
 	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 	border-radius: 4px;
 	background-color: var(--primary-color);
-	display: flex;
-	align-items: center;
-	justify-content: center;
 	transform: translate(-50%, -50%) scale(1);
 	transition: opacity 1050ms cubic-bezier(0.4, 0, 0.2, 1);
+	padding: 40px;
+	z-index: 10;
 }
 .modal > span {
 	font-size: 35px;
+}
+.title-modal {
+	display: flex;
+	flex-direction: column;
+justify-content: center;
+	font-weight: 700;
+	font-size: 20px;
+	line-height: calc (23 / 20);
+	letter-spacing: 0.03em;
+	color: var(--color-secondary-text);
+}
+.form-input {
+	width: 448px;
+	height: 345px;
+	display: flex;
+	flex-direction: column;
+	font-size: 12px;
+line-height: calc(14 / 12);
+letter-spacing: 0.01em;
+color: var(--color-primary-text);
 }
 .close {
 	position: absolute;
@@ -674,6 +693,7 @@ ul {
 	font-size: 16px;
 	line-height: calc(20 / 16);
 	letter-spacing: 0.03em;
+	
 }
 
 .subscription-input:focus-visible {
