--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ ul {
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .backdrop.is-hidden {
-	/* opacity: 0; */
+	opacity: 0;
 	pointer-events: none;
 	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -237,22 +237,94 @@ ul {
 .title-modal {
 	display: flex;
 	flex-direction: column;
-justify-content: center;
+	justify-content: center;
 	font-weight: 700;
 	font-size: 20px;
 	line-height: calc (23 / 20);
 	letter-spacing: 0.03em;
 	color: var(--color-secondary-text);
+	margin-bottom: 30px;
 }
 .form-input {
 	width: 448px;
 	height: 345px;
 	display: flex;
 	flex-direction: column;
+}
+.name-input {
+	text-align: left;
 	font-size: 12px;
-line-height: calc(14 / 12);
-letter-spacing: 0.01em;
-color: var(--color-primary-text);
+	line-height: calc(14 / 12);
+	letter-spacing: 0.01em;
+	color: var(--color-primary-text);
+}
+.username {
+	position: relative;
+	display: flex;
+	/* padding: 11px 12px; */
+}
+.modal-icon {
+	position: absolute;
+	top: 11px;
+	left: 11px;
+}
+.form-input-area {
+	width: 448px;
+	height: 40px;
+	border: 1px solid rgba(33, 33, 33, 0.2);
+	border-radius: 4px;
+	margin-bottom: 28px;
+	padding-left: 30px;
+}
+.form-input-area:focus-visible {
+	outline: none;
+}
+
+.feedback {
+	height: 120px;
+	padding: 12px 16px;
+	margin-bottom: 20px;
+}
+.modal-checkbox {
+	display: flex;
+	align-items: center;
+	gap: 8px;
+	border: none;
+}
+.custom-checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+.custom-checkbox+label {
+  display: inline-flex;
+  align-items: center;
+
+}
+.custom-checkbox+label::before {
+  content: '';
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--color-secondary-text);
+  border-radius: 4px;
+  margin-right: 8px;
+  background-size: 100%;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.custom-checkbox:checked+label::before {
+  border-color: #0b76ef;
+  background-color: #0b76ef;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+.checkbox-accept {
+	font-size: var(--primary-font-size);
+	line-height: calc(24 / 14);
+	letter-spacing: 0.03em;
+}
+.link-dogovor {
+	color: var(--color-akcent);
+	text-decoration: underline;
+	cursor: pointer;
 }
 .close {
 	position: absolute;
@@ -693,7 +765,6 @@ color: var(--color-primary-text);
 	font-size: 16px;
 	line-height: calc(20 / 16);
 	letter-spacing: 0.03em;
-	
 }
 
 .subscription-input:focus-visible {
