--- a/css/styles.css
+++ b/css/styles.css
@@ -273,7 +273,7 @@ ul {
 	height: 40px;
 	border: 1px solid rgba(33, 33, 33, 0.2);
 	border-radius: 4px;
-	margin-bottom: 28px;
+	margin-bottom: 10px;
 	padding-left: 30px;
 }
 .form-input-area:focus-visible {
@@ -290,41 +290,72 @@ ul {
 	align-items: center;
 	gap: 8px;
 	border: none;
+	margin-bottom: 30px;
 }
 .custom-checkbox {
-  position: absolute;
-  z-index: -1;
-  opacity: 0;
+	position: absolute;
+	z-index: -1;
+	opacity: 0;
 }
-.custom-checkbox+label {
-  display: inline-flex;
-  align-items: center;
-
+.custom-checkbox + label {
+	display: inline-flex;
+	align-items: center;
 }
-.custom-checkbox+label::before {
-  content: '';
-  width: 16px;
-  height: 15px;
-  border: 2px solid var(--color-secondary-text);
-  border-radius: 4px;
-  margin-right: 8px;
-  background-size: 100%;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+.custom-checkbox + label::before {
+	content: "";
+	width: 16px;
+	height: 15px;
+	border: 2px solid var(--color-secondary-text);
+	border-radius: 4px;
+	background-size: 100%;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	transition-property: background-color, box-shadow;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.custom-checkbox:checked+label::before {
-  border-color: #0b76ef;
-  background-color: #0b76ef;
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+/* .custom-checkbox:hover, */
+.custom-checkbox:checked + label::before {
+	border-color: #0b76ef;
+	background-color: #0b76ef;
+	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
 .checkbox-accept {
 	font-size: var(--primary-font-size);
 	line-height: calc(24 / 14);
 	letter-spacing: 0.03em;
+	
 }
 .link-dogovor {
 	color: var(--color-akcent);
 	text-decoration: underline;
 	cursor: pointer;
+}
+.modal-send-btn {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 200px;
+	height: 50px;
+	background: var(--color-akcent);
+	color: var(--primary-color);
+	font-weight: 700;
+	font-size: 16px;
+	line-height: calc(30 / 16);
+	letter-spacing: 0.06em;
+	text-transform:capitalize;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+	margin: 0 auto;
+	transition-property: background-color, box-shadow;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-send-btn:hover,
+.modal-send-btn:focus {
+	background-color: var(--color-btn-hover);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+	outline: none;
 }
 .close {
 	position: absolute;
