--- a/css/styles.css
+++ b/css/styles.css
@@ -218,7 +218,7 @@ ul {
 	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
-	position: fixed;
+	position: absolute;
 	top: 50%;
 	left: 50%;
 	width: 528px;
@@ -261,7 +261,6 @@ ul {
 .username {
 	position: relative;
 	display: flex;
-	/* padding: 11px 12px; */
 }
 .modal-icon {
 	position: absolute;
@@ -276,14 +275,21 @@ ul {
 	margin-bottom: 10px;
 	padding-left: 30px;
 }
-.form-input-area:focus-visible {
+.form-input-area:focus,
+.form-input-area:focus + .modal-icon  {
+	fill: var(--color-akcent);
 	outline: none;
+	border-color:var(--color-akcent) ;
 }
 
 .feedback {
 	height: 120px;
 	padding: 12px 16px;
 	margin-bottom: 20px;
+	color: var(--color-primary-text);
+}
+textarea::placeholder {
+	color: var(--color-primary-text);
 }
 .modal-checkbox {
 	display: flex;
@@ -313,7 +319,6 @@ ul {
 	transition-duration: 250ms;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-/* .custom-checkbox:hover, */
 .custom-checkbox:checked + label::before {
 	border-color: #0b76ef;
 	background-color: #0b76ef;
@@ -374,6 +379,10 @@ ul {
 	fill: var(--color-secondary-text);
 	width: 100%;
 	height: 100%;
+}
+.svg-close:hover,
+.svg-close:focus {
+	fill: var(--color-akcent);
 }
 .visually-hidden {
 	position: absolute;
