--- a/css/styles.css
+++ b/css/styles.css
@@ -165,22 +165,22 @@ ul {
 	max-width: 1600px;
 	height: 600px;
 	padding: 200px 0;
-	text-align: center;
 	margin: 0 auto;
 }
-
 .herro-title {
 	font-weight: 900;
 	font-size: 44px;
 	line-height: 1.36;
-	margin: 0 auto 30px;
+	margin: 0 auto;
+	margin-bottom: 30px;
+	text-align: center;
 	letter-spacing: 0.06em;
 	text-transform: uppercase;
 	color: var(--primary-color);
 	width: 696px;
 }
 .herro-bth {
-	display: inline-block;
+	display: block;
 	font-family: inherit;
 	font-weight: 700;
 	font-size: 16px;
@@ -193,6 +193,7 @@ ul {
 	border: none;
 	border-radius: 4px;
 	min-width: 200px;
+	margin: 0 auto;
 	transition-property: background-color, box-shadow;
 	transition-duration: 250ms;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -234,21 +235,12 @@ ul {
 	font-size: 35px;
 }
 .title-modal {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
 	font-weight: 700;
 	font-size: 20px;
-	line-height: calc (23 / 20);
+	line-height: 1.5;
 	letter-spacing: 0.03em;
 	color: var(--color-secondary-text);
-	margin-bottom: 30px;
-}
-.form-input {
-	width: 448px;
-	height: 345px;
-	display: flex;
-	flex-direction: column;
+	margin-bottom: 12px;
 }
 .name-input {
 	text-align: left;
@@ -257,25 +249,37 @@ ul {
 	letter-spacing: 0.01em;
 	color: var(--color-primary-text);
 }
+.name-input-title {
+	display: block;
+	margin-bottom: 4px;
+}
 .username {
 	position: relative;
-	display: flex;
+	margin-bottom: 10px;
 }
 .modal-icon {
 	position: absolute;
 	top: 25px;
 	left: 11px;
+	transition-property: fill, border-color;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input-area {
 	width: 448px;
 	height: 40px;
 	border: 1px solid rgba(33, 33, 33, 0.2);
 	border-radius: 4px;
-	margin-bottom: 10px;
+	
 	padding-left: 30px;
+	transition-property: fill, border-color;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input-area:focus,
-.form-input-area:focus + .modal-icon  {
+.form-input-area:focus + .modal-icon,
+.form-input-area:hover,
+.form-input-area:hover + .modal-icon   {
 	fill: var(--color-akcent);
 	outline: none;
 	border-color:var(--color-akcent) ;
@@ -286,6 +290,7 @@ ul {
 	padding: 12px 16px;
 	margin-bottom: 20px;
 	color: var(--color-primary-text);
+	resize: none;
 }
 .modal-checkbox {
 	display: flex;
@@ -335,8 +340,8 @@ ul {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 200px;
-	height: 50px;
+	min-width: 200px;
+	padding: 10px 55px;
 	background: var(--color-akcent);
 	color: var(--primary-color);
 	font-weight: 700;
@@ -370,11 +375,18 @@ ul {
 	margin: 8px;
 	display: block;
 	cursor: pointer;
+	transition-property: fill;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .svg-close {
 	fill: var(--color-secondary-text);
 	width: 100%;
 	height: 100%;
+	transition-property: fill;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+	
 }
 .svg-close:hover,
 .svg-close:focus,
@@ -614,6 +626,9 @@ ul {
 	display: block;
 	position: relative;
 	overflow: hidden;
+	transition-property: color, box-shadow;
+	transition-duration: 250ms;
+	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hiden-tumb {
 	position: relative;
@@ -682,8 +697,8 @@ ul {
 .footer {
 	position: relative;
 	background-color: var(--secondary-backgraund);
-	padding: 72px 0px;
-	z-index: -2;
+	padding: 60px 0px;
+
 	
 }
 
@@ -771,16 +786,19 @@ ul {
 	width: 20px;
 	height: 20px;
 }
+.footer-section-social {
+	margin-left: 70px;
+}
 .container-flex {
 	display: flex;
-	gap: 70px;
+
 }
 .footer-list-social {
 	display: flex;
 	gap: 10px;
 }
 .footer-subscription {
-	margin-left: 20px;
+	margin-left: auto;
 }
 .subscription-title {
 	color: var(--primary-color);
@@ -794,7 +812,7 @@ ul {
 	position: relative;
 	display: flex;
 	gap: 12px;
-	z-index: -1;
+	
 }
 .subscription-input {
 	position: relative;
@@ -822,9 +840,10 @@ ul {
 	justify-content: center;
 	background: var(--color-akcent);
 	color: var(--primary-color);
+	font-weight: 700;
 	font-size: 16px;
-	line-height: calc(30 / 16);
-	letter-spacing: 00.06em;
+	line-height: 1.87;
+	letter-spacing: 0.06em;
 	text-transform: capitalize;
 	width: 200px;
 	height: 50px;
