--- a/css/styles.css
+++ b/css/styles.css
@@ -259,7 +259,7 @@ ul {
 }
 .modal-icon {
 	position: absolute;
-	top: 25px;
+	top: 29px;
 	left: 11px;
 	transition-property: fill, border-color;
 	transition-duration: 250ms;
@@ -803,6 +803,7 @@ ul {
 .subscription-title {
 	color: var(--primary-color);
 	font-size: var(--primary-font-size);
+	font-weight: 700;
 	line-height: 1.14;
 	letter-spacing: 0.03em;
 	text-transform: uppercase;
